# ai-pos

./: .gitignore  AUTHENTICATION.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx
app/api/auth/login/: route.ts
app/api/products/: route.ts
app/api/sales/: route.ts
app/api/users/: route.ts
app/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
app/pos/: page.tsx
app/products/: layout.tsx  page.tsx
app/products/[id]/: page.tsx
app/products/import/: page.tsx
app/products/new/: page.tsx
app/sales/: page.tsx
app/sales/[id]/: page.tsx
app/users/: layout.tsx  page.tsx
components/auth/: auth-provider.tsx  protected-route.tsx
components/dashboard/: low-stock-alert.tsx
components/pos/: invoice.tsx  payment-modal.tsx
components/ui/: barcode-display.tsx  button.tsx  empty-state.tsx  error-alert.tsx  form-field.tsx  image-upload.tsx  input.tsx  label.tsx  loading-spinner.tsx  modal.tsx  page-header.tsx  select.tsx  toast.tsx
hooks/: use-api-call.ts  use-async-data.ts  use-format.ts
lib/: auth-utils.ts  barcode-utils.ts  utils.ts
lib/api/: auth.ts  middleware.ts  mock-auth.ts  products.ts
lib/stores/: auth-store.ts  cart-store.ts
lib/types/: user.ts
prisma/: schema.prisma  seed.ts
prisma/migrations/20250731062234_init/: migration.sql
prisma/migrations/20250731160401_add_product_inventory/: migration.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
types/: tauri.d.ts  window.d.ts
(+10 files in other folders)
